--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -26,4 +26,25 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+.section {
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: row;
+  font-family: sans-serif;
+}
 
+.paragraph {
+  color: #555;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  padding: 20px;
+}
+
+.title {
+  font-size: 24px;
+  color: #222;
+  line-height: 24px;
+}
