--- a/templates/faq.html
+++ b/templates/faq.html
@@ -17,6 +17,27 @@
           <a href="https://addons.mozilla.org/en-US/firefox/addon/darkreader/">Dark Reader Firefox</a>, 
           <a href="https://chrome.google.com/webstore/detail/dark-reader/eimadpbcbfnmbkopoojfekhnkhdbieeh">Dark Reader Chrome</a>
       </details>
+	  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+		<div class="panel panel-default">
+		  <div class="panel-heading p-3 mb-3" role="tab" id="heading0">
+			<h3 class="panel-title">
+			  <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse0" aria-expanded="true" aria-controls="collapse0">
+				What are the benefits of Solodev CMS?
+			  </a>
+			</h3>
+		  </div>
+		  <div id="collapse0" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading0">
+			<div class="panel-body px-3 mb-4">
+			  <p>With Solodev CMS, you and your visitors will benefit from a finely-tuned technology stack that drives the highest levels of site performance, speed and engagement - and contributes more to your bottom line. Our users fell in love with:</p>
+			  <ul>
+				<li>Light speed deployment on the most secure and stable cloud infrastructure available on the market.</li>
+				<li>Scalability – pay for what you need today and add-on options as you grow.</li>
+				<li>All of the bells and whistles of other enterprise CMS options but without the design limitations - this CMS simply lets you realize your creative visions.</li>
+				<li>Amazing support backed by a team of Solodev pros – here when you need them.</li>
+			  </ul>
+			</div>
+		  </div>
+		</div>
     </div>
   </div>
 {% endblock %}
