--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -6,8 +6,7 @@
   <div class="container-fluid">
     <h1>Acerca de Nosotros</h1>
     <div style="overflow: hidden;">
-      <img width=400 style="float: right; border-radius: 30px; " src="{{ url_for ('static', filename='images/guy_at_computer.jpeg') }}"/>
-      <p>Somos un equipo de estudiantes estudiantes de Ciencias de la Computación y de
+      <p>Somos un equipo de estudiantes estudiantes de Informática y de
       la carrera de administración de empresas con años de experiencia en el ambiente de sistemas.</p>
       <h6 style="">Frases que nos identifican</h6>
       <blockquote class="blockquote text-center">
