--- a/templates/faq.html
+++ b/templates/faq.html
@@ -6,7 +6,6 @@
   <div class="container-fluid">
     <h1>Preguntas Frecuentes</h1>
     <div style="overflow: hidden;">
-      <img width=450 style="float: right; border-radius: 10px; " src="{{ url_for ('static', filename='images/faq.jpeg') }}"/>
       <p>Somos un equipo de estudiantes estudiantes de Informática y de
       la carrera de administración de empresas con años de experiencia en el ambiente de sistemas.</p>
 
@@ -14,8 +13,8 @@
           <summary>¿Hay planes para hacer una versión dark mode del sitio?</summary>
           Por el momento no.
           Pero podés usar una extensión llamada Dark Reader que está disponible en Firefox y en Chrome.<br/>
-          <a href="https://addons.mozilla.org/en-US/firefox/addon/darkreader/">Dark Reader Firefox</a>, 
-          <a href="https://chrome.google.com/webstore/detail/dark-reader/eimadpbcbfnmbkopoojfekhnkhdbieeh">Dark Reader Chrome</a>
+          <a target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/darkreader/">Dark Reader Firefox</a>, 
+          <a target="_blank" href="https://chrome.google.com/webstore/detail/dark-reader/eimadpbcbfnmbkopoojfekhnkhdbieeh">Dark Reader Chrome</a>
       </details>
   </div>
 {% endblock %}
