--- a/templates/helpme.html
+++ b/templates/helpme.html
@@ -20,9 +20,9 @@
           <div class="card-body">
             <!-- <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>-->
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Con tu donación puedo mantener vivo este proyecto, y quizás algún día pueda hacer esto tiempo completo.</li>
+              <li>Con tu donación voy a poder pagar un servidor para las imágenes, y quizás algún día pueda hacer esto tiempo completo.</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-danger">Contactame</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Contactame</button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -35,7 +35,7 @@
                   con nuevas funciones para implementar.</li>
               <li>Comentando el código y haciendolo más lindo.</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-danger">Contactame</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Contactame</button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -48,7 +48,7 @@
                 necesitamos tu ayuda.
               </li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-danger">Contactame</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Contactame</button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -60,7 +60,7 @@
               <li>Si sabés diseñar páginas, manejás bien CSS3, Bootstrap, JS, nos podrías ayudar
               a mejorar la front-end de la web.</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-danger">Contactame</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Contactame</button>
           </div>
         </div>
   </div>
