--- a/templates/home.html
+++ b/templates/home.html
@@ -2,40 +2,34 @@
 {% block title%}Directorio{%endblock%}
 
 {% block content %}
-<div class="w-100 m-auto">
+<div class="webs-catalog">
 	{% for post in news %}
-<div class="card-deck">
-	<div class="card mb-3" style="height: 250px; overflow: hidden;">
-		<div class="row no-gutters">
-			<div class="col-md-4">
-					{% for img in post.files %}
-						<!-- Chequear la extensión primero antes de mostrar img -->
-						<a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}">
-						{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-								<img class="card-img" style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-						{% elif img.extension in ('webm', 'mp4') %}
-								<video class="card-img" height=350 src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-									Your browser does not support the video tag.
-								</video>
-						{% endif %}
-						</a>
-					{% endfor %}
-			</div>
-			<div class="col-md-8">
-				<div class="card-body">
-					<h5 class="card-title"><a href="/view/{{post.id}}">{{post.subject}}</a></h5>
-					<p class="card-text">{{bbcode.render_html(post.desc)|safe}}</p>
-					<p class="card-text"><small class="text-muted">{{post.views}} vistas.</small></p>
+		<div class="card" style="">
+		{% for img in post.files %}
+			<!-- Chequear la extensión primero antes de mostrar img -->
+			<a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}">
+			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
+					<img class="card-img" style="filter: brightness(30%); width: 100%; height: 15vw; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+			{% elif img.extension in ('webm', 'mp4') %}
+					<!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
+					<video class="card-img" style="filter: brightness(30%); width: 100%; height: 14vw; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+						Your browser does not support the video tag.
+					</video>
+			{% endif %}
+			</a>
+		{% endfor %}
+			<div class="card-img-overlay text-white d-flex flex-column justify-content-center" style="">
+				<h4 class="card-title">{{post.subject}}</h4>
+				<h6 class="card-subtitle mb-2 text-warning">{{post.views}} vistas</h6>
+				<p class="card-text ">{{post.subject[:250]}}</p>
+				<div class="link d-flex">
+					<a href="/view/{{post.id}}" target="_blank" class="card-link text-info">Leer Más</a>
+					<a href="/report/{{post.id}}" target="_blank" class="card-link text-danger"><i class="fas fa-flag"></i> Reportar</a>
 				</div>
 			</div>
 		</div>
-</div>
-</div>
-		{% else %}
-			<tr><td>No hay entradas.</td></tr>
+	{% else %}
+			No hay entradas.
   {% endfor %}
-</div>
-
-	</div>
 </div>
 {% endblock %}
