--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -9,6 +9,7 @@ body {}
   */
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 10px;
+  grid-auto-rows: 500px;
 }
 .webs-catalog > div {
 }
