--- a/templates/home.html
+++ b/templates/home.html
@@ -4,26 +4,25 @@
 {% block content %}
 <div class="webs-catalog">
 	{% for post in news %}
-		<div class="card" style="">
+
 		{% for img in post.files %}
+  <div class="card" style="overflow: hidden; min-height: 200px;">
 			<!-- Chequear la extensión primero antes de mostrar img -->
-			<a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}">
 			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-					<img class="card-img" style="filter: brightness(30%); width: 100%; height: 15vw; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+					<img class="card-img" style="filter: brightness(30%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
 			{% elif img.extension in ('webm', 'mp4') %}
 					<!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
-					<video class="card-img" style="filter: brightness(30%); width: 100%; height: 14vw; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+					<video class="card-img " style="filter: brightness(30%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
 						Your browser does not support the video tag.
 					</video>
 			{% endif %}
-			</a>
 		{% endfor %}
 			<div class="card-img-overlay text-white d-flex flex-column justify-content-center" style="">
-				<h4 class="card-title">{{post.subject}}</h4>
+				<h4 class="card-title text-white">{{post.subject}}</h4>
 				<h6 class="card-subtitle mb-2 text-warning">{{post.views}} vistas</h6>
 				<p class="card-text ">{{post.subject[:250]}}</p>
 				<div class="link d-flex">
-					<a href="/view/{{post.id}}" target="_blank" class="card-link text-info">Leer Más</a>
+					<a href="/view/{{post.id}}" target="_blank" class="card-link text-danger"><i class="fas fa-flag"></i> Leer Más</a>
 					<a href="/report/{{post.id}}" target="_blank" class="card-link text-danger"><i class="fas fa-flag"></i> Reportar</a>
 				</div>
 			</div>
