--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if nbar == 'directory' %}active{% endif %}">
-            <a class="nav-link" href="/">Directorio<span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item ">
-            <a class="nav-link {% if nbar == 'categories' %}active{% endif %}" href="/categories">Categorías</a>
+            <a class="nav-link {% if nbar == 'categories' %}active{% endif %}" href="/misc">Misc</a>
           </li>
         </ul>
 				<ul class="navbar-nav navbar-center">
