--- a/templates/home.html
+++ b/templates/home.html
@@ -2,31 +2,16 @@
 {% block title%}Directorio{%endblock%}
 
 {% block content %}
-<div class="webs-catalog">
-	{% for post in news %}
-
-		{% for img in post.files %}
-  <div class="card" style="">
-			<!-- Chequear la extensión primero antes de mostrar img -->
-			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-					<img class="card-img" style="filter: brightness(30%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-			{% elif img.extension in ('webm', 'mp4') %}
-					<!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
-					<video class="card-img " style="filter: brightness(30%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-						Your browser does not support the video tag.
-					</video>
-			{% endif %}
-		{% endfor %}
-			<div class="card-img-overlay text-white d-flex flex-column justify-content-center" style="">
-				<h4 class="card-title text-white">{{post.subject}}</h4>
-				<h6 class="card-subtitle mb-2 text-warning">{{post.views}} vistas</h6>
-				<p class="card-text ">{{post.subject[:250]}}</p>
-				<div class="link d-flex">
-					<a href="/view/{{post.id}}" target="_blank" class="btn btn-outline-primary card-link text-primary"> Leer Más</a>
-					<a href="/report/{{post.id}}" target="_blank" class="btn btn-outline-danger card-link text-danger"><i class="fas fa-flag"></i> Reportar</a>
-				</div>
-			</div>
-		</div>
+<div class="webs-catalog" style="grid-auto-rows: 250px;">
+  {% for category in lista_categorias %}
+  <div class="card text-center" style="background-color: #111;">
+    <!-- Chequear la extensión primero antes de mostrar img -->
+    <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
+      <h1 class="card-title text-white text-center">/{{category.name}}/</h1>
+      <p class="card-text ">Pequeña descripción</p>
+      <a href="/c/{{category.name}}" target="_blank" class="btn btn-info card-link">Entrar</a>
+    </div>
+  </div>
 	{% else %}
 			No hay entradas.
   {% endfor %}
