--- a/templates/category.html
+++ b/templates/category.html
@@ -22,7 +22,7 @@
 				<p class="card-text ">{{post.subject[:250]}}</p>
 				<h6 class="card-subtitle mb-2 text-muted">{{post.views}} vistas</h6>
 				<div class="link d-flex">
-					<a href="/view/{{post.id}}" target="_blank" class="btn btn-outline-light card-link"> Leer Más</a>
+					<a href="/view/{{post.id}}" target="_blank" class="btn btn-outline-dark card-link"> Leer Más</a>
 					<a href="/report/{{post.id}}" target="_blank" class="btn btn-outline-danger card-link"><i class="fas fa-flag"></i> Reportar</a>
 				</div>
 			</div>
