--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 
 {% block content %}
       <div class="container-fluid">
-          <div class="row justify-content-center" style="padding: 0px;">
+          <div class="row justify-content-center" style="">
               <div class="col-lg-10" style="">
 								<h2>Contáctanos</h2>
 								<hr>
