--- a/static/css/style_dark.css
+++ b/static/css/style_dark.css
@@ -1,4 +1,4 @@
-body {}
+body { font-family: 'PT Sans'!important; }
 .webs-catalog {
   display: grid;
   /* 
@@ -6,8 +6,8 @@ body {}
     el auto-fill al igual que el auto-fit hace que entre más elementos en la misma fila pero no los estira
   */
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 5px;
-  grid-auto-rows: 600px;
+  grid-gap: 1px;
+  grid-auto-rows: 300px;
 }
 .webs-catalog > div {
 }
