--- a/templates/category.html
+++ b/templates/category.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-<h1>{% block title %}Inicio{% endblock %}</h1>
-
+{% block title %}Inicio{% endblock %}
 
 {% block content %}
 <div class="webs-catalog">
@@ -9,21 +8,21 @@
 			<!-- Chequear la extensión primero antes de mostrar img -->
 		{% for img in post.files %}
 			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-					<img class="card-img" style="filter: brightness(25%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+					<img class="card-img" style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
 			{% elif img.extension in ('webm', 'mp4') %}
 					<!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
-					<video class="card-img " style="filter: brightness(25%); width: 100%; height: 100%; object-fit: cover;" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+					<video class="card-img " style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
 						Your browser does not support the video tag.
 					</video>
 			{% endif %}
 		{% endfor %}
 			<div class="card-img-overlay text-white d-flex flex-column justify-content-center" style="">
 				<h4 class="card-title text-white">{{post.subject}}</h4>
-				<p class="card-text ">{{post.subject[:250]}}</p>
+				<p class="card-text ">{{bbcode.render_html(post.desc[:100])|safe}}</p>
 				<h6 class="card-subtitle mb-2 text-muted">{{post.views}} vistas</h6>
 				<div class="link d-flex">
-					<a href="/view/{{post.id}}" target="_blank" class="btn btn-outline-dark card-link"> Leer Más</a>
-					<a href="/report/{{post.id}}" target="_blank" class="btn btn-outline-danger card-link"><i class="fas fa-flag"></i> Reportar</a>
+					<a href="/view/{{post.id}}" class="btn btn-primary card-link" style=""> Leer Más</a>
+					<a href="#" class="btn btn-outline-primary card-link"><i class="fas fa-flag"></i> Reportar</a>
 				</div>
 			</div>
 		</div>
