--- a/templates/faq.html
+++ b/templates/faq.html
@@ -7,14 +7,7 @@
     <h1>Preguntas Frecuentes</h1>
     <div style="overflow: hidden;">
       <p>Somos un equipo de estudiantes estudiantes de Informática y de
-      la carrera de administración de empresas con años de experiencia en el ambiente de sistemas.</p>
+      la carrera de administración de empresas.</p>
 
-      <details>
-          <summary>¿Hay planes para hacer una versión dark mode del sitio?</summary>
-          Por el momento no.
-          Pero podés usar una extensión llamada Dark Reader que está disponible en Firefox y en Chrome.<br/>
-          <a target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/darkreader/">Dark Reader Firefox</a>, 
-          <a target="_blank" href="https://chrome.google.com/webstore/detail/dark-reader/eimadpbcbfnmbkopoojfekhnkhdbieeh">Dark Reader Chrome</a>
-      </details>
   </div>
 {% endblock %}
