--- a/templates/misc.html
+++ b/templates/misc.html
@@ -3,32 +3,33 @@
 
 {% block content %}
 <div class="jumbotron-fluid">
-<div class="webs-catalog">
-	{% for post in news %}
-  <div class="card text-white" style="">
-			<!-- Chequear la extensión primero antes de mostrar img -->
-		{% for img in post.files %}
-			{% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
-					<img class="card-img" style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-			{% elif img.extension in ('webm', 'mp4') %}
-					<!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
-					<video class="card-img " style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
-						Your browser does not support the video tag.
-					</video>
-			{% endif %}
-		{% endfor %}
-			<div class="card-img-overlay d-flex flex-column justify-content-center" style="">
-          <h4 class="card-title text-white">{{post.subject}}</h4>
-          <p class="card-text lead">{{post.subject[:250]}}</p>
-          <h6 class="card-subtitle mb-4 text-dark">{{post.views}} vistas</h6>
-          <div class="link d-flex">
-            <a href="/view/{{post.id}}" target="_blank" class="card-link btn btn-outline-dark"> Ver</a>
-          </div>
-			</div>
-		</div>
-	{% else %}
-			No hay entradas.
-  {% endfor %}
-</div>
+  <div class="webs-catalog">
+    {% for post in news %}
+    <div class="card text-white" style="">
+        <!-- Chequear la extensión primero antes de mostrar img -->
+      {% for img in post.files %}
+        {% if img.extension in ('jpg', 'gif', 'jpeg', 'png') %}
+            <img class="card-img" style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+        {% elif img.extension in ('webm', 'mp4') %}
+            <!-- esto es solucionable porque no vamos a usar el video en sí si no una imágen generada del video -->
+            <video class="card-img " style="" src="{{ url_for ('static', filename='user_data/images/')}}{{img.file}}"/>
+              Your browser does not support the video tag.
+            </video>
+        {% endif %}
+      {% endfor %}
+        <div class="card-img-overlay d-flex flex-column justify-content-center" style="">
+            <h4 class="card-title text-white">{{post.subject}}</h4>
+            <p class="card-text">{{bbcode.render_html(post.desc[:100])|safe}}</p>
+            <h6 class="card-subtitle mb-4 text-dark">{{post.views}} vistas</h6>
+            <div class="link d-flex">
+              <a href="/view/{{post.id}}" class="btn btn-primary card-link"> Leer Más</a>
+              <a href="#" class="btn btn-outline-primary card-link"><i class="fas fa-flag"></i> Reportar</a>
+            </div>
+        </div>
+      </div>
+    {% else %}
+        No hay entradas.
+    {% endfor %}
+  </div>
 </div>
 {% endblock %}
